--- a/GDP/GDP.html
+++ b/GDP/GDP.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="web development, graphic design, photography, video editing, logo design">
     <meta name="author" content="Jesse Crane">
     <meta name="robots" content="index, follow">
-    <link rel="icon" href="./media/Growling Duck No Text2.png" type="image/png">
+    <link rel="icon" href="./media/GDP Logo notext noback.png" type="image/png">
     <link rel="apple-touch-icon" href="./media/Growling Duck No Text2.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo">Growling Duck <img src="./media/Growling Duck No Text2.png" width="80px" height="80px" alt="Growling Duck Logo"></a>
+        <a href="#" class="logo">Growling Duck <img src="./media/GDP Logo notext noback.png" width="80px" height="80px" alt="Growling Duck Logo"></a>
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul class="menu">
             <li><a href="#home" onclick="toggleMenu();">Home</a></li>
