--- a/GDP/GDP.html
+++ b/GDP/GDP.html
@@ -91,7 +91,7 @@
                         </div>
                         <div class="text">
                             <h3>Email</h3>
-                            <p><a href="mailto:info@growlingduck.com" style="font-size: 2em;">info@growlingduck.com</a></p>
+                            <p><a href="mailto:jesse@growlingduck.com" style="font-size: 2em;">jesse@growlingduck.com</a></p>
                         </div>
                     </div>
                     </div>
