--- a/GDP/GDP.html
+++ b/GDP/GDP.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo">Growling Duck <img src="./media/GDP Logo notext noback.png" width="80px" height="80px" alt="Growling Duck Logo"></a>
+        <a href="#" class="logo"><img src="./media/GDP Logo notext noback.png" width="80px" height="80px" alt="Growling Duck Logo">Growling Duck Productions</a>
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul class="menu">
             <li><a href="#home" onclick="toggleMenu();">Home</a></li>
